Project section alignment fixes.

--- a/src/App.css
+++ b/src/App.css
@@ -498,7 +498,7 @@ nav.dark .togglerSlider {
 #projects.contentWrapper .projectContainer {
   width: 90%;
   max-width: 1000px;
-  margin: 50px;
+  margin: 20px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -580,6 +580,7 @@ nav.dark .togglerSlider {
   letter-spacing: 2px;
   font-size: 10px;
   border-radius: 5px;
+  margin: 10px;
 }
 
 #projects.contentWrapper.dark .projectContainer .projectRight.leftToRight,
@@ -598,6 +599,7 @@ nav.dark .togglerSlider {
   width: 100%;
   height: 100%;
   border-radius: 8px;
+  border: 1px solid #fdf6e0;
 }
 
 #projects.contentWrapper .projectContainer .projectLeft.rightToLeft {
@@ -641,14 +643,13 @@ nav.dark .togglerSlider {
   letter-spacing: 2px;
   font-size: 10px;
   border-radius: 5px;
-  margin-right: 20px;
+  margin: 10px;
 }
 
 @media only screen and (max-width: 768px) {
   #projects.contentWrapper .projectContainer {
     flex-direction: column;
     width: 100%;
-    margin: 0 20px;
   }
   #projects.contentWrapper .projectContainer .projectLeft.leftToRight {
     width: 100%;
@@ -670,7 +671,7 @@ nav.dark .togglerSlider {
   #projects.contentWrapper .projectContainer .projectLeft.rightToLeft {
     width: 90%;
     margin: 0;
-    margin-top: 100px;
+    /*margin-top: 100px;*/
   }
 }
 /*Projects Page Styling - END*/
